<resources>
    <string name="app_name">Live Attendance App</string>
    <string name="hello_sign_in_your_account">Halo, Masukkan akun Anda</string>
    <string name="sirajin">SIRAJIN DPR RI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="copyright">Sekretariat Jenderal DPR RI\n2023</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="txt_forgot_password">Masukkan email anda dibawah untuk reset password.</string>
    <string name="submit">Kirim</string>
    <string name="history">Histori</string>
    <string name="attendance">Kehadiran</string>
    <string name="profile">Profil</string>
    <string name="current_location">Lokasi sekarang</string>
    <string name="default_text" translatable="false">-</string>
    <string name="your_photo">Foto Anda</string>
    <string name="check_in">Datang</string>
    <string name="check_out">Pulang</string>
    <string name="check_in_time">Waktu\nDatang</string>
    <string name="check_out_time">Waktu\nPulang</string>
    <string name="date">Tanggal</string>
    <string name="month">Bulan</string>
    <string name="change_password">Ganti Password</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="isi_logbook">Isi Logbook</string>
    <string name="isi_tugas_pokok">Isi Tugas Pokok</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="keterangan">Keterangan</string>
    <string name="logout">Keluar</string>
    <string name="old_password">password lama</string>
    <string name="new_password">password baru</string>
    <string name="confirm_new_password">Konfirmasi password baru</string>
    <string name="please_field_your_email">Mohon isi kolom email Anda</string>
    <string name="please_use_valid_email">Mohon isi email yang benar</string>
    <string name="please_field_your_password">Mohon isi password Anda</string>
    <string name="failed">Gagal</string>
    <string name="success">Sukses</string>
    <string name="not_granted">Tidak diizinkan</string>
    <string name="required_permission">Izin yang diperlukan</string>
    <string name="search_your_location">Mencari lokasi Anda</string>
    <string name="failed_to_capture_image">Gagal mengambil foto</string>
    <string name="are_you_sure">Apakah Anda yakin?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="alert">Peringatan</string>
    <string name="please_take_your_photo">Mohon ambil foto wajah Anda</string>
    <string name="success_check_in">Sukses presensi datang</string>
    <string name="success_check_out">Sukses presensi pulang</string>
    <string name="something_wrong">Ada kesalahan</string>
    <string name="location_not_valid">Lokasi anda terlalu jauh untuk presensi</string>
    <string name="fake_gps_detected">Anda terdeteksi menggunakan Fake GPS</string>
    <string name="your_already_present">Anda sudah melakukan presensi</string>
    <string name="your_password_has_been_update">Password Anda sudah diubah</string>
    <string name="your_password_didnt_match">Password Anda tidak cocok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>