<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.logbook.LogbookFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/isi_logbook"
            app:titleTextColor="@color/colorPrimary"
            android:elevation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_isi_tugas_pokok"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:hintEnabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_isi_tugas_pokok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/isi_tugas_pokok"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_jam_mulai"
        android:layout_width="match_parent"
        android:background="@drawable/bg_edit_text"
        android:layout_height="56dp"
        app:hintEnabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <TextView
            android:id="@+id/et_jam_mulai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/jam_mulai"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_jam_selesai"
        android:layout_width="match_parent"
        android:background="@drawable/bg_edit_text"
        android:layout_height="56dp"
        app:hintEnabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <TextView
            android:id="@+id/et_jam_selesai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/jam_selesai"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_keterangan"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:hintEnabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_keterangan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/keterangan"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_btn_primary"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</LinearLayout>