<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".views.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:title="@string/profile"
            app:titleTextColor="@color/colorPrimary"
            android:elevation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@android:color/darker_gray"
                    android:layout_centerHorizontal="true"
                    android:elevation="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="85dp"
                            app:contentPaddingTop="15dp"
                            app:contentPaddingRight="15dp"
                            app:contentPaddingLeft="15dp"
                            app:contentPaddingBottom="15dp"
                            app:cardCornerRadius="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_name_profile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/default_text"
                                    android:textSize="26sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/colorPrimary"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="65dp"/>

                                <TextView
                                    android:id="@+id/tv_unit_kerja_profile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/default_text"
                                    android:textSize="22sp"
                                    android:textStyle="bold"
                                    android:textColor="@android:color/black"
                                    android:layout_gravity="center_horizontal"/>

                                <TextView
                                    android:id="@+id/tv_email_profile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:text="@string/default_text"
                                    android:layout_gravity="center_horizontal"/>

                                <Button
                                    android:id="@+id/btn_change_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/change_password"
                                    android:background="@drawable/bg_btn_primary"
                                    android:textColor="@android:color/white"
                                    android:layout_marginTop="40dp" />

                                <android.widget.Button
                                    android:id="@+id/btn_logout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:background="@drawable/bg_btn_logout"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/logout"
                                    android:textColor="@android:color/white"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>